[tool.poetry]
name = "jit-code"
version = "0.1.0"
description = "JIT Code: Just-in-Time Implementation"
authors = ["Jiri Klimes <jiriklimes920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
