[tool.poetry]
name = "jit-implementation"
version = "0.1.4"
description = "JIT Implementation: Code That Writes Itself"
authors = ["Jiri Klimes <jiriklimes920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.0"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
rich = "^13.9.1"
ruff = "^0.6.8"


[tool.poetry.group.dev.dependencies]
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
